<resources>
    <string name="app_name">Memorizer</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start">Start</string>
    <string name="btn_end">End</string>
    <string name="btn_answer">Answer</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_next">Next</string>
    <string name="btn_manage_quiz">Manage Quiz</string>
    <string name="btn_edit">Edit Quiz</string>
    <string name="btn_add">Add Quiz</string>
    <string name="btn_delete_all_quiz">Delete All Quiz</string>
    <string name="btn_delete_quiz">Delete Quiz</string>
    <string name="btn_save">Save</string>
    <string name="btn_load">Load</string>
    <string name="btn_init_db_schema">Init DB schema</string>
    <string name="btn_drop_db_schema">Drop DB schema</string>
    <string name="btn_change_situations">Change situations</string>
    <string name="btn_OK">OK</string>
    <string name="btn_CANCEL">Cancel</string>
    <string name="id">id</string>
    <string name="type">type</string>
    <string name="title">title</string>
    <string name="update_date">update_date</string>
    <string name="raise">Raise</string>
    <string name="call">Call</string>
    <string name="fold">Fold</string>
    <string name="raiseOrFold">Raise50/Fold50</string>
    <string name="raiseOrCall">Raise50/Call50</string>

    <string-array name="lst_situation">
        <item>Open</item>
        <item>Facing a raise</item>
        <item>Facing a 3bet</item>
        <item>Facing a 4bet</item>
    </string-array>
    <string-array name="lst_position">
        <item>UTG</item>
        <item>HJ</item>
        <item>CO</item>
        <item>BTN</item>
        <item>SB</item>
        <item>BB</item>
        <item>NULL</item>
    </string-array>
    <string-array name="lst_quiz_type">
        <item>HAND_ACTION</item>
        <item>TEXT</item>
    </string-array>
</resources>
